# alchemist

./: .cursorrules  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LEGAL.md  LICENSE  PRIVACY.md  README.md  RUN.txt  SECURITY.md  package.json  pnpm-lock.yaml  svitlana-excel-agent-v2.html  turbo.json
apps/vst-wrapper/: CMakeLists.txt  README.md
apps/vst-wrapper/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
artifacts/: aiom-one-screen-status.txt  aiom-public-key.pem  audit-receipt-73eb37216498.json  demo-status.md  godzilla-receipt-73eb37216498.md  keynote-build.js  keynote-build.scpt  operator-state.json  pitch-deck.md  presentation-evidence-pack.json  presentation-evidence-pack.md  release-audit-receipt-59ab0e031919.json  release-audit-receipt-59ab0e031919.md  release-audit-receipt-5de1c97c5a5c.json  release-audit-receipt-5de1c97c5a5c.md  release-audit-receipt-862db0ec8c8a.md  release-audit-receipt-e449ad5a21db.json  release-audit-receipt-e449ad5a21db.md  release-audit-receipt-latest.json  rll-outcomes.jsonl  token-ledger.json  truth-matrix.json  truth-matrix.schema.json  truth-matrix.sig
capabilities/: root.capabilities.json
config/: eslint-preset.js  tsconfig.base.json
crates/: Cargo.toml
crates/aiom-artifact/: Cargo.toml
crates/aiom-artifact/src/: lib.rs
crates/aiom-log/: Cargo.toml
crates/aiom-log/src/: lib.rs
crates/aiom-merkle/: Cargo.toml
crates/aiom-merkle/src/: lib.rs
crates/aiom-runner/: Cargo.toml
crates/aiom-runner/src/: lib.rs
crates/aiom-signing/: Cargo.toml
crates/aiom-signing/src/: lib.rs
crates/aiom-timestamp/: Cargo.toml
crates/aiom-timestamp/src/: lib.rs
crates/aiom-trace/: Cargo.toml
crates/aiom-trace/src/: lib.rs
crates/aiom-verify/: Cargo.toml
crates/aiom-verify/src/: lib.rs  main.rs
docs/: AGENT-PLAYBOOK.md  AIOM-Architecture.md  AIOM-Fused-Principles.md  AIOM-Technical-Brief.md  CONSTITUTION.md  CORE_MODEL_V6.md  CRUCIAL-FIX-WEB-APP-NOT-RUNNING.md  Engine-School-Lesson-Path-Outside-Assessment.md  Engine-School-Lessons-1-2-Outside-Assessment.md  Engine-School-Validation.md  FIRE-core.md  FIRE-extensions.md  FIRE-ops.md  FIRE-runtime.md  FIRE.md  FIRESTARTER.md  GFUSC-spec.md  ILASI.md  MINIMUM-OPERATING-NUMBER.md  PNH_IMMUNITY.md  README.md  SESSION-TOPICS-AND-AJI.md  V4-REFINERY.md  alchemist-cursor-prompts.html  alchemist-full-unblock-plan.html  brain-plus.md  brain.md  codex-narrative.md  critical-fix-happy-panda-autoload.md  critical-fix-keynote-automation.md  critical-fixes-aiom-truth-dev.md  cursor-taste-rebuild.md  cursor-universal-habits.md  fire-metrics.json  fire-metrics.schema.json  fire-metrics.sha256  fire-v2-roadmap.md  implementation_plan_mon117.md  inner-circle-agent.md  integrity-locks-manifest.md  (+9 more)
research/: README.md
research/alchemist-strategic-fusion/: README.md  pyproject.toml  setup.cfg
research/alchemist-strategic-fusion/src/alchemist_strategic_fusion/: __init__.py  __main__.py  dataset.py  game_features.py  hf_music_backbone.py  losses.py  parsers_pgn.py  parsers_sgf.py  pipeline.py  positional_encoding.py  strategic_attention.py  strategic_encoder.py  train_skeleton.py
research/alchemist-strategic-fusion/tests/: test_shapes.py
scripts/: aggregate-truth.mjs  aiom-one-screen-status.mjs  analyze-serum2-format.mjs  assert-encoder-diff-prerequisites.mjs  assert-fire-sync-clean.mjs  assert-hard-gate.mjs  assert-vst-available.mjs  assert-wasm-available.mjs  bridge-telegram.py  calibrate-gates.ts  capability-detector.mjs  check-determinism.mjs  check-env-local.mjs  check-no-shadow-patterns.mjs  check-parity.mjs  check-truth-parity.mjs  demo-launch.mjs  demo-status.mjs  dev-alchemist-port.mjs  dev-guardian.mjs  dev.sh  doctor.mjs  enforce-release-strict-gates.mjs  engine-estimate.ts  fetch-roughtime.mjs  final-audit.mjs  fresh-web.sh  fxp-inspect.mjs  generate-godzilla-receipt.mjs  generate-truth-matrix.mjs  git-agent-flow.mjs  git-commit-only.mjs  git-push-only.mjs  git-save.mjs  github-first-push.mjs  go.sh  happy-panda.mjs  harshcheck.mjs  health-release-audit.mjs  identity-sync.mjs  (+54 more)
tests/: verify-telegram-bridge.ts
tmp/: svitlana-alchemist-audit.html  transmutation-report.mjs
tools/: 808 - Decomposed.SerumPreset  (+13 more)
(+154 files in other folders)
