[workspace]
resolver = "2"
members = [
    "aiom-runner",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Alchemist Team"]
license = "MIT"

[workspace.dependencies]
serde_json = "1.0"
sha2 = "0.10"
rs_merkle = "1.4"
thiserror = "1.0"
anyhow = "1.0"
ed25519-dalek = "2.1"
rand = "0.8"
