[package]
name = "aiom-artifact"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aiom-runner = { path = "../aiom-runner" }
aiom-trace = { path = "../aiom-trace" }
aiom-merkle = { path = "../aiom-merkle" }
aiom-signing = { path = "../aiom-signing" }
aiom-timestamp = { path = "../aiom-timestamp" }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
