[package]
name = "aiom-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aiom-artifact = { path = "../aiom-artifact" }
aiom-runner = { path = "../aiom-runner" }
aiom-trace = { path = "../aiom-trace" }
aiom-merkle = { path = "../aiom-merkle" }
aiom-signing = { path = "../aiom-signing" }
aiom-timestamp = { path = "../aiom-timestamp" }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
